--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>Simple React CRUD Application</title>
+  <title>React CRUD</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
   <link rel='stylesheet prefetch' href='http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css'>
@@ -20,12 +20,12 @@
   <div id="button"></div>
 </div>
 <div id="footer">
-<p class="muted credit">Created by Sedat Can Uygur</p>
+<p class="muted credit">Created By Wingbangla Inc.</p>
 </div>
-  <script src='http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/react/0.14.3/react-dom.min.js'></script>
-<script src='https://cdnjs.cloudflare.com/ajax/libs/react-bootstrap/0.28.1/react-bootstrap.min.js'></script>
+  <script src='js/jquery.min.js'></script>
+<script src='js/react.min.js'></script>
+<script src='js/react-dom.min.js'></script>
+<script src='js/react-bootstrap.min.js'></script>
 
   
 
