--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
   <title>React CRUD</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
   
-  <link rel='css/bootstrap.min.css'>
-
+      <link rel="stylesheet" href="css/bootstrap.min.css">
       <link rel="stylesheet" href="css/style.css">
 
   
