--- a/bookfinder/index.html
+++ b/bookfinder/index.html
@@ -1053,7 +1053,8 @@
             </a>
         </div-->
 
-        <div class="col-md-12 shop-tab-container">
+        <!-- <div class="col-md-12 shop-tab-container"> -->
+        <div class="col-md-12">
             <!--div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 shop-tab-menu">
                 <div class="list-group">
                     <a href="#" class="list-group-item">
@@ -1409,71 +1410,70 @@
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-3 shop-tab">
                 <h2>Latest <b>Products</b></h2>
             </div>
-
-
-            </!--div>
         </div>
-        <div class="row">
-            <div class="col-md-12">
-                <hr>
-                <h2>Made By IdeaFactorie</h2>
-            </div>
+    </div>
+
+    <div class="row">
+        <div class="col-md-12">
+            <hr>
+            <h2>Made By IdeaFactorie</h2>
         </div>
+    </div>
 
 
-        <!-- <script src="js/jquery-3.1.1.js"></script>
+    <!-- <script src="js/jquery-3.1.1.js"></script>
         <script src="js/bootstrap.js"></script> -->
 
-        <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
-        <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
-        <script type="text/javascript">
-            ! function($, n, e) {
-                var o = $();
-                $.fn.dropdownHover = function(e) {
-                    return "ontouchstart" in document ? this : (o = o.add(this.parent()), this.each(function() {
-                        function t(e) {
-                            o.find(":focus").blur(), h.instantlyCloseOthers === !0 && o.removeClass("open"), n.clearTimeout(c), i.addClass("open"), r.trigger(a)
-                        }
-                        var r = $(this),
-                            i = r.parent(),
-                            d = {
-                                delay: 100,
-                                instantlyCloseOthers: !0
-                            },
-                            s = {
-                                delay: $(this).data("delay"),
-                                instantlyCloseOthers: $(this).data("close-others")
-                            },
-                            a = "show.bs.dropdown",
-                            u = "hide.bs.dropdown",
-                            h = $.extend(!0, {}, d, e, s),
-                            c;
-                        i.hover(function(n) {
-                            return i.hasClass("open") || r.is(n.target) ? void t(n) : !0
+    <script src="//code.jquery.com/jquery-1.11.1.min.js"></script>
+    <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.0/js/bootstrap.min.js"></script>
+    <script type="text/javascript">
+        ! function($, n, e) {
+            var o = $();
+            $.fn.dropdownHover = function(e) {
+                return "ontouchstart" in document ? this : (o = o.add(this.parent()), this.each(function() {
+                    function t(e) {
+                        o.find(":focus").blur(), h.instantlyCloseOthers === !0 && o.removeClass("open"), n.clearTimeout(c), i.addClass("open"), r.trigger(a)
+                    }
+                    var r = $(this),
+                        i = r.parent(),
+                        d = {
+                            delay: 100,
+                            instantlyCloseOthers: !0
+                        },
+                        s = {
+                            delay: $(this).data("delay"),
+                            instantlyCloseOthers: $(this).data("close-others")
+                        },
+                        a = "show.bs.dropdown",
+                        u = "hide.bs.dropdown",
+                        h = $.extend(!0, {}, d, e, s),
+                        c;
+                    i.hover(function(n) {
+                        return i.hasClass("open") || r.is(n.target) ? void t(n) : !0
+                    }, function() {
+                        c = n.setTimeout(function() {
+                            i.removeClass("open"), r.trigger(u)
+                        }, h.delay)
+                    }), r.hover(function(n) {
+                        return i.hasClass("open") || i.is(n.target) ? void t(n) : !0
+                    }), i.find(".dropdown-submenu").each(function() {
+                        var e = $(this),
+                            o;
+                        e.hover(function() {
+                            n.clearTimeout(o), e.children(".dropdown-menu").show(), e.siblings().children(".dropdown-menu").hide()
                         }, function() {
-                            c = n.setTimeout(function() {
-                                i.removeClass("open"), r.trigger(u)
+                            var t = e.children(".dropdown-menu");
+                            o = n.setTimeout(function() {
+                                t.hide()
                             }, h.delay)
-                        }), r.hover(function(n) {
-                            return i.hasClass("open") || i.is(n.target) ? void t(n) : !0
-                        }), i.find(".dropdown-submenu").each(function() {
-                            var e = $(this),
-                                o;
-                            e.hover(function() {
-                                n.clearTimeout(o), e.children(".dropdown-menu").show(), e.siblings().children(".dropdown-menu").hide()
-                            }, function() {
-                                var t = e.children(".dropdown-menu");
-                                o = n.setTimeout(function() {
-                                    t.hide()
-                                }, h.delay)
-                            })
                         })
-                    }))
-                }, $(document).ready(function() {
-                    $('[data-hover="dropdown"]').dropdownHover()
-                })
-            }(jQuery, this);
-        </script>
+                    })
+                }))
+            }, $(document).ready(function() {
+                $('[data-hover="dropdown"]').dropdownHover()
+            })
+        }(jQuery, this);
+    </script>
 </body>
 
 </html>
