--- a/bookfinder/index.html
+++ b/bookfinder/index.html
@@ -1182,19 +1182,19 @@
 
                             <div class="carousel-inner">
                                 <div class="item active">
-                                    <img src="http://placehold.it/800x400" alt="...">
+                                    <img src="https://image.ibb.co/g0CAPp/ipad.jpg" alt="...">
                                     <div class="carousel-caption">
                                         <h2>Heading</h2>
                                     </div>
                                 </div>
                                 <div class="item">
-                                    <img src="http://placehold.it/800x400" alt="...">
+                                    <img src="https://image.ibb.co/g0CAPp/ipad.jpg" alt="...">
                                     <div class="carousel-caption">
                                         <h2>Heading</h2>
                                     </div>
                                 </div>
                                 <div class="item">
-                                    <img src="http://placehold.it/800x400" alt="...">
+                                    <img src="https://image.ibb.co/g0CAPp/ipad.jpg" alt="...">
                                     <div class="carousel-caption">
                                         <h2>Heading</h2>
                                     </div>
