--- a/bookfinder/index.html
+++ b/bookfinder/index.html
@@ -124,7 +124,8 @@
             font-weight: normal;
             line-height: 1.42857143;
             color: #878c94;
-            font-size: 15px white-space: nowrap;
+            font-size: 15px;
+            white-space: nowrap;
         }
         
         .topBar .dropdown-menu>li>a:hover,
